syntax = "proto3";

option go_package = "github.com/SebastianFM1/Go-projects/OMSV2/commons/api";

package api;

message Order {
    string ID = 1;
    string customerID = 2;
    string status = 3;
    repeated Item items = 4; // Cambiado de "Items" a "Item"
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemsWithQuantity {
    string ID = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity items = 2;
}

message CreateOrderResponse {
    string orderID = 1;
    string status = 2;
}